--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="/__/firebase/6.0.4/firebase-app.js"></script>
+
+      <script src="/__/firebase/init.js"></script>
   </body>
 </html>
